--- a/index.html
+++ b/index.html
@@ -1,105 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Panda Commerce</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
          <div class="container-fluid">
-           <a class="navbar-brand" href="#">
-              <img src="/images/logo.png" alt="">
-           </a>
-           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-             <span class="navbar-toggler-icon"></span>
-           </button>
-           <div class="collapse navbar-collapse" id="navbarNav">
-             <ul class="navbar-nav">
-               <li class="nav-item">
-                 <a class="nav-link active" aria-current="page" href="#">Home</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#shoes">Shoes</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#backpack">BackPack</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#subscribe">Subscribe</a>
-               </li>
-             </ul>
-           </div>
+            <a class="navbar-brand" href="#">
+               <img src="/images/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav">
+                  <li class="nav-item">
+                     <a class="nav-link active" aria-current="page" href="#">Home ---</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link active" href="#shoes">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link active" href="#backpack">BackPack</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link active" href="#subscribe">Subscribe</a>
+                  </li>
+               </ul>
+            </div>
          </div>
-       </nav>
+      </nav>
    </div>
    <div class="container">
       <div id="carouselExampleControls" class="carousel slide orange-bg" data-bs-ride="carousel">
          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-         <div class="carousel-inner">
-           <div class="carousel-item active">
-             <div class="row align-items-center">
-                <div class="col-md-7">
-                  <h1>Mega LCD TV For Sports</h1>
-                  <p>This is the best tv in the world for people who just want to waste time in front of tv</p>  
-                  <h1 class="price">$1200</h1>
-                  <button class="buy-now-button">Buy Now</button>                
-                </div>
-                <div class="col-md-5">
-                  <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                </div>
-             </div>
-           </div>
-           <div class="carousel-item">
-              <div class="row align-items-center">
-                 <div class="col-md-7">
-                  <h1>Cool Dude Headphon</h1>
-                  <p>This is the best Headphone in the world for people who just want to waste time in front of funky world  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati consequatur expedita assumenda repudiandae molestias fuga.</p>  
-                  <h1 class="price">$420</h1>
-                  <button class="buy-now-button">Buy Now</button>
-                 </div>
-                 <div class="col-md-5">
-                  <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                 </div>
-              </div>
-           </div>
-           <div class="carousel-item">
-              <div class="row align-items-center">
-                 <div class="col-md-7">
-                  <h1>X-Box For Your Room</h1>
-                  <p>This is the best X-Box in the world for people who just want to waste time in front of fake sports  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugit.</p>  
-                  <h1 class="price">$600</h1>
-                  <button class="buy-now-button">Buy Now</button>
-                 </div>
-                 <div class="col-md-5">
-                  <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                 </div>
-              </div>
-           </div>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+               aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+               aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+               aria-label="Slide 3"></button>
          </div>
-         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-           <span class="visually-hidden">Previous</span>
+         <div class="carousel-inner">
+            <div class="carousel-item active">
+               <div class="row align-items-center">
+                  <div class="col-md-7">
+                     <h1>Mega LCD TV For Sports</h1>
+                     <p>This is the best tv in the world for people who just want to waste time in front of tv</p>
+                     <h1 class="price">$1200</h1>
+                     <button class="buy-now-button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                     <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                  </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <div class="row align-items-center">
+                  <div class="col-md-7">
+                     <h1>Cool Dude Headphon</h1>
+                     <p>This is the best Headphone in the world for people who just want to waste time in front of funky
+                        world Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati consequatur expedita
+                        assumenda repudiandae molestias fuga.</p>
+                     <h1 class="price">$420</h1>
+                     <button class="buy-now-button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                     <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                  </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <div class="row align-items-center">
+                  <div class="col-md-7">
+                     <h1>X-Box For Your Room</h1>
+                     <p>This is the best X-Box in the world for people who just want to waste time in front of fake
+                        sports Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugit.</p>
+                     <h1 class="price">$600</h1>
+                     <button class="buy-now-button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                     <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                  </div>
+               </div>
+            </div>
+         </div>
+         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
          </button>
-         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-           <span class="visually-hidden">Next</span>
+         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
          </button>
-       </div>
+      </div>
+      <div class="container-categories">
+         <div class="row">
+            <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat1">
+                  <h1>Watch</h1>
+                  <img src="images/categories/watch.png" alt="">
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat2">
+                  <h1>Bag</h1>
+                  <img src="images/categories/bag.png" alt="">
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat3">
+                  <h1>Shoes</h1>
+                  <img src="images/categories/shoes.png" alt="">
+               </div>
+            </div>
+         </div>
+      </div>
+
+
    </div>
-   
+
+   <div class="container" id="shoes">
+      <h3>Shoes</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+         <div class="col">
+            <div class="card">
+               <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                     additional content. This content is a little bit longer.</p>
+                  <h5>$120</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+         <div class="col">
+            <div class="card">
+               <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                     additional content. This content is a little bit longer.</p>
+                  <h5>$240</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+         <div class="col">
+            <div class="card">
+               <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Red AirMax</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                     additional content.</p>
+                  <h5>$350</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+         <!-- <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div> -->
+      </div>
+   </div>
+   </div>
 
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>   
+   <div class="container" id="backpack">
+      <h3>BackPack</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+         <div class="col">
+            <div class="card h-100">
+               <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Red BackPack</h5>
+                  <h5>$120</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                     additional content. This content is a little bit longer.</p>
+               </div>
+               <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+         <div class="col">
+            <div class="card h-100">
+               <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Blue BackPack</h5>
+                  <h5>$325</h5>
+
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                  </p>
+               </div>
+               <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+         <div class="col">
+            <div class="card h-100">
+               <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Black BackPack</h5>
+                  <h5>$169</h5>
+
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                     additional content. This card has even longer content than the first to show that equal height
+                     action.</p>
+               </div>
+               <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+
+   <div class="container d-flex justify-content-center align-items-center orange-bg" id="subscribe">
+      <div>
+         <h3>Lets's Stay in Touch</h3>
+         <h6>Get Updates on Sales, Special and More</h6>
+         <input class="form-control" type="text"><br>
+         <button class="buy-now-button">SUBSCRIBE</button>
+      </div>
+   </div>
+
+   <footer>
+      <p>&copy2021 Panda Commerce, All right reserved- (shaginahmed) </p>
+   </footer>
+
+
+
+
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
