updated panda site

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                <div class="card-body">
                   <h5 class="card-title">Red AirMax</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                     additional content.</p>
+                     additional content. Lorem, ipsum dolor sit amet consec </p>
                   <h5>$350</h5>
                   <button class="buy-now-button">Buy Now >></button>
                </div>
